# solarman-opendata

./: README.md  pyproject.toml
.github/workflows/: publish.yml
solarman_opendata/: _init_.py  const.py  errors.py  solarman.py
tests/: test_solarman.py
